--- a/src/app/admin/layout/components/sidebar/sidebar.component.scss
+++ b/src/app/admin/layout/components/sidebar/sidebar.component.scss
@@ -1,6 +1,6 @@
 .sidebar-accordion {
     width: 250px; // Sidebar genişliğini artırır
-    background-color: #820c0c; // Sidebar arka plan rengini belirginleştirir
+    background-color: rgba(35, 24, 185, 0.807); // Sidebar arka plan rengini belirginleştirir
     padding: 1rem;
     height: 100vh;
     position: fixed;
