--- a/src/app/admin/components/brands/brand-create/brand-create.component.html
+++ b/src/app/admin/components/brands/brand-create/brand-create.component.html
@@ -1,10 +1,13 @@
-<div class="modal-body" style="padding-bottom: 1px;">
-    <div class="form-group">
-        <label for="ad">Marka:</label>
-        <input type="text" id="name" name="name" class="form-control" #name required>
-    </div>
-    <div class="modal-footer" style="border-top: none;">
-        <button type="button" class="btn btn-warning" style="margin-top: 10px;"
-            (click)="createBrand(name.value)">Kaydet</button>
-    </div>
-</div>
+<mat-card>
+    <mat-card-title>Brand Create</mat-card-title>
+    <mat-card-content>
+      <form [formGroup]="brandForm" (ngSubmit)="onSubmit()">
+        <mat-form-field appearance="fill">
+          <mat-label>Brand Name</mat-label>
+          <input matInput formControlName="name" required>
+        </mat-form-field>
+        <button mat-raised-button color="primary" type="submit">Create Brand</button>
+      </form>
+    </mat-card-content>
+  </mat-card>
+  
