--- a/src/app/admin/components/brands/brand-list/brand-list.component.scss
+++ b/src/app/admin/components/brands/brand-list/brand-list.component.scss
@@ -11,7 +11,7 @@
 }
 
 ::ng-deep .mat-mdc-select-trigger {
-  background-color: #185bc3;
+  background-color: rgb(24, 93, 195);
   border-radius: 30px;
 }
 ::ng-deep .mat-mdc-select-value-text {
