--- a/src/app/admin/layout/components/sidebar/sidebar.component.scss
+++ b/src/app/admin/layout/components/sidebar/sidebar.component.scss
@@ -1,38 +1,38 @@
 .sidebar-accordion {
-    width: 250px; // Sidebar genişliğini artırır
-    background-color: rgba(35, 24, 185, 0.807); // Sidebar arka plan rengini belirginleştirir
-    padding: 1rem;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    left: 0;
-  
-    .mat-expansion-panel-header {
-      .panel-title {
-        display: flex;
-        align-items: center;
-  
-        .menu-icon {
-          margin-right: 8px; // menu.icon ile menu.title arasında boşluk bırakır
-        }
-      }
-    }
-  
-    .nav-item {
+  width: 250px; /* Sidebar genişliğini artırır */
+  background: -webkit-linear-gradient(to right, rgba(24, 93, 195), rgba(6, 19, 100, 0.8)); /* Gradient background */
+  background: linear-gradient(to right, rgba(24, 93, 195), rgba(6, 19, 100, 0.8)); /* Standard linear gradient syntax */
+  padding: 1rem;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  .mat-expansion-panel-header {
+    .panel-title {
       display: flex;
       align-items: center;
-      padding: 8px;
-  
-      mat-icon.child-icon {
-        margin-right: 8px;
-        vertical-align: middle; // İkonun ortalanması için
-      }
-  
-      .child-title {
-        display: inline-flex;
-        align-items: center;
-        vertical-align: middle; // Metnin ortalanması için
+
+      .menu-icon {
+        margin-right: 8px; /* menu.icon ile menu.title arasında boşluk bırakır */
       }
     }
   }
-  
+
+  .nav-item {
+    display: flex;
+    align-items: center;
+    padding: 8px;
+
+    mat-icon.child-icon {
+      margin-right: 8px;
+      vertical-align: middle; /* İkonun ortalanması için */
+    }
+
+    .child-title {
+      display: inline-flex;
+      align-items: center;
+      vertical-align: middle; /* Metnin ortalanması için */
+    }
+  }
+}
