--- a/src/app/dialogs/featurevalueDialogs/featurevaluecreateconfrim-dialog/featurevaluecreateconfrim-dialog.component.html
+++ b/src/app/dialogs/featurevalueDialogs/featurevaluecreateconfrim-dialog/featurevaluecreateconfrim-dialog.component.html
@@ -1,6 +1,6 @@
 <h1 mat-dialog-title>Onay</h1>
 <div mat-dialog-content>
-  <h2>{{data.name}}</h2> özelliğini eklemek istiyor musunuz?</div>
+  <h2>{{data.name}}</h2> Özellik değerini eklemek istiyor musunuz?</div>
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">Hayır</button>
   <button mat-raised-button style="background-color: green; color: aliceblue;" [mat-dialog-close]="true" cdkFocusInitial>Evet</button>
