--- a/src/app/admin/components/features/feature-create/feature-create.component.html
+++ b/src/app/admin/components/features/feature-create/feature-create.component.html
@@ -14,6 +14,10 @@
 
       <div class="container">
         <h3>Kategorileri Kontrol Et</h3>
+        <mat-form-field appearance="fill">
+          <mat-label>Kategori Ara</mat-label>
+          <input matInput [formControl]="categoryFilterCtrl" placeholder="Kategori Ara">
+        </mat-form-field>
         <div class="button-group">
           <button mat-stroked-button color="primary" (click)="toggleAll(true)" type="button">Hepsini Seç</button>
           <button mat-stroked-button color="warn" (click)="toggleAll(false)" type="button">Hepsini Kaldır</button>
