--- a/src/app/admin/components/features/feature-create/feature-create.component.html
+++ b/src/app/admin/components/features/feature-create/feature-create.component.html
@@ -24,6 +24,7 @@
           <button mat-stroked-button color="accent" (click)="expandAll()" type="button">Hepsini Aç</button>
           <button mat-stroked-button color="accent" (click)="collapseAll()" type="button">Hepsini Kapat</button>
         </div>
+        
         <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="category-tree">
           <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle matTreeNodePadding>
             <mat-checkbox [checked]="node.checked" (change)="toggleCategory(node, !node.checked)">
@@ -43,34 +44,15 @@
             </div>
           </mat-tree-node>
         </mat-tree>
-        <mat-selection-list>
-          <mat-list-option *ngFor="let category of filteredCategories | async" [value]="category">
-            <div class="category-item">
-              <mat-checkbox [checked]="category.checked" (change)="toggleCategory(category, !category.checked)">
-                {{ category.name }}
-              </mat-checkbox>
-              <button mat-button *ngIf="category.subCategories" (click)="category.expanded = !category.expanded" type="button">
-                {{ category.expanded ? 'Kapat' : 'Aç' }}
-              </button>
-            </div>
-            <ul *ngIf="category.expanded && category.subCategories">
-              <ng-container *ngTemplateOutlet="recursiveList; context: { $implicit: category.subCategories }"></ng-container>
-            </ul>
-          </mat-list-option>
-        </mat-selection-list>
       </div>
 
-      <div class="selected-category-section">
-        <h3>Seçilen Kategoriler</h3>
-        <mat-chip-listbox>
-          <mat-chip *ngFor="let category of selectedCategories" (removed)="removeCategory(category)">
-            {{ category.name }}
-            <button mat-icon-button matChipRemove>
-              <mat-icon>cancel</mat-icon>
-            </button>
-          </mat-chip>
-        </mat-chip-listbox>
-      </div>
+      <h3>Seçilen Kategoriler</h3>
+      <mat-chip-listbox>
+        <mat-chip *ngFor="let category of selectedCategories" (removed)="removeCategory(category)">
+          {{category.name}}
+          <mat-icon matChipRemove>cancel</mat-icon>
+        </mat-chip>
+      </mat-chip-listbox>
 
       <div>
         <button mat-raised-button color="primary" type="submit" [disabled]="featureForm.invalid">Kaydet</button>
@@ -79,21 +61,3 @@
     </form>
   </mat-card-content>
 </mat-card>
-
-<ng-template #recursiveList let-subCategories>
-  <ng-container *ngFor="let subCategory of subCategories">
-    <li>
-      <div class="category-item">
-        <mat-checkbox [checked]="subCategory.checked" (change)="toggleCategory(subCategory, !subCategory.checked)">
-          {{ subCategory.name }}
-        </mat-checkbox>
-        <button mat-button *ngIf="subCategory.subCategories" (click)="subCategory.expanded = !subCategory.expanded" type="button">
-          {{ subCategory.expanded ? 'Kapat' : 'Aç' }}
-        </button>
-      </div>
-      <ul *ngIf="subCategory.expanded && subCategory.subCategories">
-        <ng-container *ngTemplateOutlet="recursiveList; context: { $implicit: subCategory.subCategories }"></ng-container>
-      </ul>
-    </li>
-  </ng-container>
-</ng-template>
