--- a/src/app/admin/components/brands/brand-list/brand-list.component.scss
+++ b/src/app/admin/components/brands/brand-list/brand-list.component.scss
@@ -94,3 +94,14 @@
 .mat-row:hover {
   background-color: #f1f1f1;
 }
+
+.app-delete-directive-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px; /* Padding'i sadece container'a uyguluyoruz */
+}
+
+.app-delete-directive-container button {
+  margin: 0;
+}
