--- a/src/app/admin/components/features/feature-list/feature-list.component.scss
+++ b/src/app/admin/components/features/feature-list/feature-list.component.scss
@@ -95,3 +95,13 @@
     background-color: #f1f1f1;
   }
   
+  .app-delete-directive-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px; /* Padding'i sadece container'a uyguluyoruz */
+  }
+  
+  .app-delete-directive-container button {
+    margin: 0;
+  }
