--- a/src/app/admin/components/categories/category-list/category-list.component.html
+++ b/src/app/admin/components/categories/category-list/category-list.component.html
@@ -31,11 +31,27 @@
           <td mat-cell *matCellDef="let item">{{ item.name }}</td>
         </ng-container>
 
+        <ng-container matColumnDef="edit">
+        <th mat-header-cell *matHeaderCellDef width="45">Güncelle</th>
+        <td mat-cell *matCellDef="let item"> <button class="button_edit" (click)="navigateToUpdate(item.id)">
+            <span class="button_edit__text">Güncelle</span><span class="button_edit__icon"><svg
+                xmlns="http://www.w3.org/2000/svg" width="24" viewBox="0 0 24 24" stroke-width="2" stroke-linejoin="round"
+                stroke-linecap="round" stroke="#a649da" height="24" fill="none" class="svg">
+                <path d="m20 20h-16"></path>
+                <path clip-rule="evenodd"
+                  d="m14.5858 4.41422c.781-.78105 2.0474-.78105 2.8284 0 .7811.78105.7811 2.04738 0 2.82843l-8.28322 8.28325-3.03046.202.20203-3.0304z"
+                  fill-rule="evenodd"></path>
+              </svg></span>
+          </button> </td>
+      </ng-container>
+
         <ng-container matColumnDef="Delete">
           <th mat-header-cell *matHeaderCellDef class="header-cell">Sil</th>
           <td mat-cell *matCellDef="let item">
-            <app-delete-directive [id]="item.id" [controller]="'categories'" [itemName]="item.name" (refresh)="searchCategory()">
-            </app-delete-directive>
+            <div class="app-delete-directive-container">
+              <app-delete-directive [id]="item.id" [controller]="'categories'" [itemName]="item.name" (refresh)="searchCategory()">
+              </app-delete-directive>
+            </div>
           </td>
         </ng-container>
 
