--- a/src/app/admin/components/categories/category-list/category-list.component.scss
+++ b/src/app/admin/components/categories/category-list/category-list.component.scss
@@ -1,96 +1,170 @@
-::ng-deep .mat-mdc-paginator-outer-container {
-    background-color: #1d1c1c;
-    color: white;
-    border-radius: 30px;
-    border: 5px solid #185bc3;
-  }
-  
-  .mat-mdc-header-cell {
-    background-color: #007bff !important;
-    color: #fff !important;
-    text-align: center;
-    font-size: 1.1rem;
-    padding: 10px;
-  }
-  
-  ::ng-deep .mat-mdc-paginator-range-actions {
-    background-color: #185bc3;
-    border-radius: 30px;
-  }
-  
-  ::ng-deep .mat-mdc-select-trigger {
-    background-color: rgb(24, 93, 195);
-    border-radius: 30px;
-  }
-  ::ng-deep .mat-mdc-select-value-text {
-    color: white;
-    margin-left: 5px;
-  }
-  
-  ::ng-deep .mat-mdc-select-arrow {
-    margin-right: 5px;
-  }
-  ::ng-deep .mat-mdc-select-arrow svg {
-    color: white;
-  }
-  
-  .container {
-    background-color: #f8f9fa;
-    padding: 30px;
-    border-radius: 8px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  }
-  
-  .page-title {
-    font-size: 2.5rem;
-    color: #343a40;
-    margin-bottom: 0;
-  }
-  
-  .page-description {
-    font-size: 1.2rem;
-    color: #6c757d;
-    margin-top: 0;
-  }
-  
-  .search-box {
-    width: 100%;
-    margin-bottom: 20px;
-  }
-  
-  .mat-mdc-cell {
-    text-align: -webkit-center;
-    align-content: center;
-  }
-  
-  .search-box .form-control {
-    border-top-left-radius: 20px;
-    border-bottom-left-radius: 20px;
-  }
-  
-  .search-box .btn {
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
-    background-color: #007bff;
-    color: #fff;
-  }
-  
-  .mat-paginator {
-    margin-top: 20px;
-  }
-  
-  .table {
-    width: 100%;
-    margin-top: 20px;
-    border-collapse: separate;
-  }
-  
-  
-  .mat-row {
-    transition: background-color 0.3s;
-  }
-  
-  .mat-row:hover {
-    background-color: #f1f1f1;
-  }
-  
+.mat-mdc-paginator-outer-container {
+  background-color: #1d1c1c;
+  color: white;
+  border-radius: 30px;
+  border: 5px solid #185bc3;
+}
+
+.mat-mdc-header-cell {
+  background-color: #007bff !important;
+  color: #fff !important;
+  text-align: center;
+  font-size: 1.1rem;
+  padding: 10px;
+}
+
+.mat-mdc-paginator-range-actions {
+  background-color: #185bc3;
+  border-radius: 30px;
+}
+
+.mat-mdc-select-trigger {
+  background-color: rgb(24, 93, 195);
+  border-radius: 30px;
+}
+
+.mat-mdc-select-value-text {
+  color: white;
+  margin-left: 5px;
+}
+
+.mat-mdc-select-arrow {
+  margin-right: 5px;
+}
+
+.mat-mdc-select-arrow svg {
+  color: white;
+}
+
+.container {
+  background-color: #f8f9fa;
+  padding: 30px;
+  border-radius: 8px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+}
+
+.page-title {
+  font-size: 2.5rem;
+  color: #343a40;
+  margin-bottom: 0;
+}
+
+.page-description {
+  font-size: 1.2rem;
+  color: #6c757d;
+  margin-top: 0;
+}
+
+.search-box {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.mat-mdc-cell {
+  text-align: -webkit-center;
+  align-content: center;
+}
+
+.search-box .form-control {
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
+}
+
+.search-box .btn {
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+  background-color: #007bff;
+  color: #fff;
+}
+
+.mat-paginator {
+  margin-top: 20px;
+}
+
+.table {
+  width: 100%;
+  margin-top: 20px;
+  border-collapse: separate;
+}
+
+.mat-row {
+  transition: background-color 0.3s;
+}
+
+.mat-row:hover {
+  background-color: #f1f1f1;
+}
+
+.app-delete-directive-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px; /* Padding'i sadece container'a uyguluyoruz */
+}
+
+.app-delete-directive-container button {
+  margin: 0;
+}
+
+.button_edit {
+  position: relative;
+  width: 60px;
+  height: 25px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #0418ae;
+  background-color: #11bbefba;
+  overflow: hidden;
+}
+
+.button_edit,
+.button_edit__icon,
+.button_edit__text {
+  transition: all 0.3s;
+}
+
+.button_edit .button_edit__text {
+  position: relative;
+  transform: translateX(0);
+  color: #fff;
+  font-weight: 600;
+}
+
+.button_edit .button_edit__icon {
+  position: absolute;
+  transform: translateX(124px);
+  height: 100%;
+  width: 19px;
+  background-color: #0418ae;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button_edit .svg {
+  width: 20px;
+  stroke: #fff;
+}
+
+.button_edit:hover {
+  background: #0418ae;
+}
+
+.button_edit:hover .button_edit__text {
+  color: transparent;
+}
+
+.button_edit:hover .button_edit__icon {
+  width: 100%;
+  transform: translateX(0);
+}
+
+.button_edit:active .button_edit__icon {
+  background-color: #03117e;
+}
+
+.button_edit:active {
+  border: 1px solid #03117e;
+}
