--- a/src/app/admin/components/featurevalues/featurevalue-list/featurevalue-list.component.html
+++ b/src/app/admin/components/featurevalues/featurevalue-list/featurevalue-list.component.html
@@ -34,8 +34,10 @@
           <ng-container matColumnDef="Delete">
             <th mat-header-cell *matHeaderCellDef class="header-cell">Sil</th>
             <td mat-cell *matCellDef="let item">
+              <div class="app-delete-directive-container">
               <app-delete-directive [id]="item.id" [controller]="'featurevalues'" [itemName]="item.name" (refresh)="searchFeaturevalue()">
               </app-delete-directive>
+            </div>
             </td>
           </ng-container>
   
